# chadd-paper

./: README.md  pyproject.toml
chadd/: __init__.py
data/aggregate/ibm_brisbane/: experiment_samples.pickle
data/aggregate/ibm_kyiv/: experiment_samples.pickle  params.yaml
data/aggregate/ibm_sherbrooke/: experiment_samples.pickle  params.yaml
data/aggregate/ibm_strasbourg/: experiment_samples.pickle  params.yaml
notebooks/: plot_chadd_experiments.ipynb
